# mysqlcode_gen

./: .gitignore  Cargo.toml  README.md  readme.md
doc/: a.db  know.txt  readme.txt  sqlite3_init.sql  todo.txt
mysql_codegen/: Cargo.toml
mysql_codegen/src/: lib.rs
mysql_model/: Cargo.toml
mysql_model/src/: cf_model.rs  lib.rs  model.rs  mysql_util.rs
sqlite_codegen/: Cargo.toml
sqlite_codegen/src/: lib.rs
sqlite_model/: Cargo.toml
sqlite_model/src/: cf_model.rs  lib.rs  model.rs  sqlite_util.rs
