[package]
name = "mysql_model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql_codegen = { path = "../mysql_codegen" }

tokio = { version = "1.15", features = ["full"] }

mysql = "22"

sqlx = { version = "0.5", features = ["runtime-tokio-native-tls", "mysql", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }


[target.'cfg(not(any(target_os = "windows", target_os = "macos", target_os = "ios")))'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

